--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
   <h2>Hello World</h2>
   <h3>처음 만드는 웹 페이지</h3>
-   <image src = ‘Images/sample.jpg’>
+   <image src = ‘C:\Users\Admin\Pictures\images’>
 </body>
 </html>
