--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
   <h2>Hello World</h2>
   <h3>처음 만드는 웹 페이지</h3>
-   <image src = ‘C:\Users\Admin\Pictures\images’>
+   <img src = "images/%EC%9B%83%EB%8A%94%EC%95%84%EC%9D%B4.jfif">
 </body>
 </html>
