--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
   <h2>Hello World</h2>
   <h3>처음 만드는 웹 페이지</h3>
-   <img src = "https://github.com/hyunkyung-sohn/hyunkyung-sohn.github.io/blob/main/%EB%8B%A4%EC%9A%B4%EB%A1%9C%EB%93%9C.jfif">
+   <img src = "images/happy.jpg">
 </body>
 </html>
