--- a/test.html
+++ b/test.html
@@ -8,8 +8,9 @@
     <h1>여기는 제일 큰 제목</h1>
     <h6>여기는 제일 작은 제목</h6>
     <!-- in-line elements -->
-    <span>안녕하새요?</span>
+    <span>안녕하세요?</span>
     <span>축하합니다</span>
     <!--block level-->
+    <span>여기는 DV</span>
   </body>
 </html>
