--- a/test.html
+++ b/test.html
@@ -2,15 +2,19 @@
 <html lang='ko'>
   <head>
     <title>HTML 연습</title>
+    <style>
+      sp1 {color:green;}
+    </style>
   </head>
   <body>
     <!--block level elements -->
     <h1>여기는 제일 큰 제목</h1>
     <h6>여기는 제일 작은 제목</h6>
     <!-- in-line elements -->
-    <span>안녕하세요?</span>
-    <span>축하합니다</span>
+    <span id="sp1">안녕하세요?</span>
+    <span id="sp2">축하합니다</span>
     <!--block level-->
-    <span>여기는 DV</span>
+    <div>여기는 DV</div>
+    <div>여기는 DV두번째</div>
   </body>
 </html>
