--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
   <head>
     <title>HTML 연습</title>
     <style>
-      #sp1 {color:green; display:block;}
+      #sp1 {color:green; display:in-line;}
     </style>
   </head>
   <body>
